Time: 37 ms (24%), Space: 59.2 MB (45.76%) - LeetHub